# prime-sieve

./: Cargo.toml  README.md
src/: main.rs
