[package]
name = "prime-sieve"
version = "0.1.0"
edition = "2021"

[dependencies]
priority-queue = "1.3.2"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
